[tool.poetry]
name = "launcha"
version = "0.0.1"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.26.0"
boto3 = "^1.20.7"
wandb = "^0.12.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
launcha = "launcha.launcha:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
